2007-07-23   Theodore Kilgore <kilgota@auburn.edu>
	* README.digigr8: Notes on how to change the capture-preview 
	resolution setting added. 

2007-07-16   Theodore Kilgore <kilgota@auburn.edu>
	* library.c: "Disney pix micro" camera supports "delete all."
	Also, digigr8 cameras will do capture_preview. These two functions added.
	0x9050 cameras need to be distinguished from 0x905C cameras. 
	* digigr8.c: camera functions to support deletion and capture.
	* digigr8.h: necessary changes. 

2007-07-12   Theodore Kilgore <kilgota@auburn.edu>
	* library.c: "Disney pix micro" camera, 0x2770:0x9050, works 
	with this driver. Added it. 


2007-06-25   Theodore Kilgore <kilgota@auburn.edu>
	* digi_postprocess.c: removal of superfluous variables. 
	* digigr8.c: signedness warnings fixed
	* library.c: ditto 


2007-03-28   Theodore Kilgore <kilgota@auburn.edu>

	* digi_postprocess.c: small improvements to decompression algorithm.
	* library.c: small improvements to decompression algorithm.

2007-03-28   Theodore Kilgore <kilgota@auburn.edu>

	* digi_postprocess.c: a decompression algorithm is installed. 
	* digigr8.c: small changes to accommodate decompression
	* library.c: small changes in get_file_func() to accommodate 
	use of decompression.
	* digigr8.h: new functions added for stage 1 and stage 2 decompression
	* README.digigr8: updated to describe new functionality

2006-12-13   Theodore Kilgore <kilgota@auburn.edu>

	* digigr8.c: removed superfluous function digi_read_data()..



2006-06-22   Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added Praktica Slimpix, reported by
	  Gervase Markham.
          See: http://sourceforge.net/mailarchive/message.php?msg_id=20703116

2006-03-26   Theodore Kilgore <kilgota@auburn.edu>

	* library.c: Added Vivitar Vivicam35, reported by self.


2005-12-31  Hubert Figuiere  <hub@figuiere.net>

	* library.c: Added Nexxtech Mini Digital Camera
	reported by Ken Kennedy

2005-12-29   Theodore Kilgore <kilgota@auburn.edu>
