@@ -1,3 +1,7 @@
+2007-09-04   Theodore Kilgore <kilgota@auburn.edu>
+	* library.c: ZINA Mini Digital Keychain Camera added, reported
+		     by Alvin Austin <alvin.austin@gmail.com>.
+
 2007-07-23   Theodore Kilgore <kilgota@auburn.edu>
 	* README.digigr8: Notes on how to change the capture-preview 
 	resolution setting added. 
